# PPE_2020_VoitureAutonome

./: info
SPRINT_2/: Budget_PPE_V1.xlsx  CDC_PPE_V1.1.docx  Scénario-PPE-Semaine-2.pages
SPRINT_Final/: VIDEO-POSTER_ECar_36.txt
Taches/: PPE_RépartitionTaches.pptx  Taches_Respo&Diff.xlsx
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/include/ece_msgs/: BasicContainer.h  Desinsertion.h  Feu.h  FreinageUrgence.h  IDs.h  Init.h  Insertion.h  ItsPduHeader.h  Phase.h  Platoon.h  ReferencePosition.h  Speed.h  StationType.h  VitesseInterdistance.h  ecemsg.h
catkin_ws/devel/include/etsi_msgs/: AccelerationControl.h  ActionID.h  Altitude.h  BasicVehicleContainerHighFrequency.h  BasicVehicleContainerLowFrequency.h  CAM.h  CauseCode.h  Curvature.h  CurvatureCalculationMode.h  DENM.h  DeltaReferencePosition.h  DriveDirection.h  EventPoint.h  ExteriorLights.h  Heading.h  InformationQuality.h  ItsPduHeader.h  LocationContainer.h  LongitudinalAcceleration.h  ManagementContainer.h  PathDeltaTime.h  PathHistory.h  PathPoint.h  PositionConfidenceEllipse.h  (+11 more)
catkin_ws/src/controler/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
catkin_ws/src/ece_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/ece_msgs/src/: CMakeLists.txt  publisher_ece.cpp  subscriber_ece.cpp
catkin_ws/src/ecebot/: CMakeLists.txt  package.xml
catkin_ws/src/etsi_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/light/: CMakeLists.txt  package.xml
catkin_ws/src/simu_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/vehicles/: CMakeLists.txt  manifest.xml
(+391 files in other folders)
